--- a/index.html
+++ b/index.html
@@ -4,11 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://zerodha.com/static/images/favicon.png">
     <title>Zerodha - Online stock trading at lowest prices from India's biggest stock broker</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <div class="row">
+                <img class="header_logo" src="https://zerodha.com/static/images/favicon.png">
+                <small class="logo_support">ZERODHA</small>
+                <div class="header_nav">
+                    <a href="#">Sign up</a>
+                    <a href="#">About</a>  
+                    <a href="#">Products</a>  
+                    <a href="#">Pricing</a>   
+                    <a href="#">Support</a>
+                </div>
+            </div>
+        </div>
+    </header>
+    <section>
+        <div class="part1">
+            <img src="images/1st image.png">
+            <h1>Invest in everything</h1>
+            <p>Online platform to invest in stocks, derivatives, mutual funds, and more</p>
+            <a href="#">Sign up now</a>
+        </div>
+    </section>
+    <section>
+        <div class="part2 row">
+            <div class="part2_1">
+                <img src="images/2nd image.png">
+            </div>
+            <div class="part2_2">
+                <h2>Largest stock broker in India</h2>
+                <p>8+ million Zerodha clients contribute to over 15% of all retail order volumes in India daily by trading and investing in:</p>
+                <ul>
+                    <li>Futures and Options</li>
+                    <li>Commodity derivatives</li>    
+                    <li>Currency derivatives</li>    
+                    <li>Stocks & IPOs</li>    
+                    <li>Direct mutual funds</li>    
+                    <li>Bonds and Govt. Securities</li>    
+                </ul>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
