--- a/index.html
+++ b/index.html
@@ -42,17 +42,78 @@
             </div>
             <div class="part2_2">
                 <h2>Largest stock broker in India</h2>
-                <p>8+ million Zerodha clients contribute to over 15% of all retail order volumes in India daily by trading and investing in:</p>
-                <ul>
-                    <li>Futures and Options</li>
-                    <li>Commodity derivatives</li>    
-                    <li>Currency derivatives</li>    
-                    <li>Stocks & IPOs</li>    
-                    <li>Direct mutual funds</li>    
-                    <li>Bonds and Govt. Securities</li>    
-                </ul>
+                <p>8+ million Zerodha clients contribute to over 15% of all retail order<br>volumes in India daily by trading and investing in:</p>
+                <div class="listing row">
+                    <div class="list1">
+                        <ul>
+                            <li>Futures and Options</li>
+                            <li>Commodity derivatives</li>    
+                            <li>Currency derivatives</li>   
+                        </ul>
+                    </div>
+                    <div class="list2">
+                        <ul> 
+                            <li>Stocks & IPOs</li>    
+                            <li>Direct mutual funds</li>    
+                            <li>Bonds and Govt. Securities</li>    
+                        </ul>  
+                    </div> 
+                </div>
             </div>
         </div>
     </section>
+    <section>
+        <div class="part3">
+            <div class="part3_1">
+                <h2>The Zerodha Universe</h2>
+                <p>A whole ecosystem of modern investment apps
+                <br> tailored to specific needs, built from the ground up</p>
+            </div>
+            <div class="part3_2">
+                <img src="images/3 imgs.png">
+            </div>
+            <a href="#">Explore our products</a>
+        </div>
+    </section>
+    <section>
+        <div class="part4 row">
+            <div class="part4_1">
+                <h2>Unbeatable pricing</h2>
+                <p>We pioneered the concept of discount broking and price<br>transparency in India. Flat fees and no hidden charges.</p>
+                <a href="#">See pricing </a>
+            </div>
+            <div class="part4_2 row">
+                <div class="p4_21">
+                    <h2>₹0</h2>
+                    <p>Free equity delivery and<br>direct mutual funds</p>
+                 </div>
+                <div class="p4_22>">
+                <h2>₹20</h2>
+                <p>Intraday and F&O </p>
+                </div>
+            </div>
+        </div>    
+    </section> 
+    <section>
+        <div class="part5 row">
+            <div class="part5_1">
+                <img src="images/varsity.PNG">
+            </div>
+            <div class="part5_2">
+                <h2>Free and open market education</h2>
+                <p>Varsity, the largest online stock market education book in the world<br>covering everything from the basics to advanced trading.</p>
+                <a href="#">Varsity</a>
+                <p>TradingQ&A, the most active trading and investment community in<br>India for all your market related queries.</p></h2>    
+                <a href="#">TradingQ&A</a>    
+            </div>
+        </div>
+    </section>  
+    <section>
+        <div class="open">
+            <h1>Open a Zerodha account</h1>
+            <p>Modern platforms and apps, ₹0 investments, and flat ₹20 intraday and F&O trades.</p><br>
+            <a href="#">Sign up now</a>
+        </div>
+    </section>     
 </body>
 </html>
