--- a/index.html
+++ b/index.html
@@ -114,6 +114,56 @@
             <p>Modern platforms and apps, ₹0 investments, and flat ₹20 intraday and F&O trades.</p><br>
             <a href="#">Sign up now</a>
         </div>
-    </section>     
+    </section>  
+    <footer>
+        <div class="foot row">
+            <div class="foot1">
+                <img class="header_logo" src="https://zerodha.com/static/images/favicon.png">
+                <small class="logo_support">ZERODHA</small>
+            </div>
+            <div class="foot2">
+                <h3>Company</h3>
+                <a href="#">About</a><br>
+                <a href="#">Products</a><br>    
+                <a href="#">Pricing</a><br>    
+                <a href="#">Referral programme</a><br>    
+                <a href="#">Careers</a><br>    
+                <a href="#">Zerodha.tech</a><br>    
+                <a href="#">Press & media</a><br>    
+                <a href="#">Zerodha Cares (CSR)</a><br>  
+            </div>
+            <div class="foot3">
+                <h3>Support</h3>
+                <a href="#">Contact</a><br>                                                
+                <a href="#">Support portal</a><br>    
+                <a href="#">Z-Connect blog</a><br>    
+                <a href="#">List of charges</a><br>    
+                <a href="#">Downloads & resources</a><br>    
+                <a href="#">Videos</a><br>    
+                <a href="#">Market overview</a><br>   
+            </div>
+            <div class="foot4">
+                <h3>Account</h3>
+                <a href="#">Open an account</a><br>
+                <a href="#">Fund transfer</a><br>    
+                <a href="#">60 day challenge</a><br>    
+            </div>
+            <p>Zerodha Broking Ltd.: Member of NSE​ &​ BSE – SEBI Registration no.: INZ000031633 CDSL: Depository services through Zerodha Broking Ltd. – SEBI Registration no.: IN-DP-431-2019 Commodity Trading through Zerodha Commodities Pvt. Ltd. MCX: 46025 – SEBI Registration no.: INZ000038238 Registered Address: Zerodha Broking Ltd., #153/154, 4th Cross, Dollars Colony, Opp. Clarence Public School, J.P Nagar 4th Phase, Bengaluru - 560078, Karnataka, India. For any complaints pertaining to securities broking please write to complaints@zerodha.com, for DP related to dp@zerodha.com. Please ensure you carefully read the Risk Disclosure Document as prescribed by SEBI | ICF
+                Procedure to file a complaint on SEBI SCORES: Register on SCORES portal. Mandatory details for filing complaints on SCORES: Name, PAN, Address, Mobile Number, E-mail ID. Benefits: Effective Communication, Speedy redressal of the grievances
+                Investments in securities market are subject to market risks; read all the related documents carefully before investing.
+                Attention investors: 1) Stock brokers can accept securities as margins from clients only by way of pledge in the depository system w.e.f September 01, 2020. 2) Update your e-mail and phone number with your stock broker / depository participant and receive OTP directly from depository on your e-mail and/or mobile number to create pledge. 3) Check your securities / MF / bonds in the consolidated account statement issued by NSDL/CDSL every month.
+                "Prevent unauthorised transactions in your account. Update your mobile numbers/email IDs with your stock brokers. Receive information of your transactions directly from Exchange on your mobile/email at the end of the day. Issued in the interest of investors. KYC is one time exercise while dealing in securities markets - once KYC is done through a SEBI registered intermediary (broker, DP, Mutual Fund etc.), you need not undergo the same process again when you approach another intermediary." Dear Investor, if you are subscribing to an IPO, there is no need to issue a cheque. Please write the Bank account number and sign the IPO application form to authorize your bank to make payment in case of allotment. In case of non allotment the funds will remain in your bank account. As a business we don't give stock tips, and have not authorized anyone to trade on behalf of others. If you find anyone claiming to be part of Zerodha and offering such services, please create a ticket here.</p>
+            <div class="last">
+                <a href="#">NSE</a>
+                <a href="#">BSE</a>
+                <a href="#">MCX</a>
+                <a href="#">Terms & conditions</a>
+                <a href="#">Policies & procedures</a>
+                <a href="#">Privacy policy</a>
+                <a href="#">Disclosure</a>
+                <a href="#">For investor's attention</a>
+            </div>
+        </div>
+    </footer>  
 </body>
 </html>
